# calki

./: CMakeLists.txt  README.md  drawer.cpp  drawer.h  includer.h  main.cpp  mainwindow.cpp  mainwindow.h  tescik.cpp  tescik.h  zakres.cpp  zakres.h
